[tool.poetry]
name = "tap-sftp"
version = "2.1.14"
description = "Singer.io tap for extracting data"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "^3.7"
singer-python = "5.9.0"
chardet = "4.0.0"
paramiko = "2.6.0"
backoff = "1.8.0"
terminaltables = "3.1.0"
boto3 = "1.24.35"
smart-open = "^6.1.0"
python-gnupg = {git = "ssh://git@github.com/symon-ai/python-gnupg.git", rev = "0.4.9.1"}

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tap-sftp = "tap_sftp.tap:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
