[tool.poetry]
name = "tap-sftp"
version = "2.1.26"
description = "Singer.io tap for extracting data"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = "^3.7.1"
pipelinewise-singer-python = "2.0.1"
chardet = "4.0.0"
paramiko = "2.6.0"
backoff = "1.11.1"
terminaltables = "3.1.0"
boto3 = "1.24.35"
smart-open = "^6.1.0"
python-gnupg = {git = "ssh://git@github.com/symon-ai/python-gnupg.git", tag = "0.4.9.1"}
file-processors = {git = "ssh://git@github.com/symon-ai/file-processors.git", tag = "v1.0.8"}

[tool.poetry.dev-dependencies]
tox = "3.25.1"
pytest = "7.1.3"
coverage = "6.4.4"
mypy = "0.971"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
tap-sftp = "tap_sftp.tap:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
