[tool.poetry]
name = "tap-sftp"
version = "5.0.0"
description = "Singer.io tap for extracting data"
authors = ["Stitch"]
classifiers = ["Programming Language :: Python :: 3 :: Only"]

[tool.poetry.dependencies]
python = ">3.13.0,<4.0"
singer-python = "^6.3.0"
chardet = "^5.2.0"
paramiko = "^3.4.0"
backoff = "^2.2.1"
terminaltables = "^3.1.0"
boto3 = "^1.42.19"
smart-open = "^7.5.0"
python-gnupg = {git = "ssh://git@github.com/symon-ai/python-gnupg.git", tag = "0.4.9.1"}
file-processors = {git = "ssh://git@github.com/symon-ai/file-processors.git", tag = "v4.0.0"}

[tool.poetry.dev-dependencies]
tox = "3.25.1"
pytest = "7.1.3"
coverage = "6.4.4"
mypy = "0.971"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
tap-sftp = "tap_sftp.tap:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
